// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`neon-auth > disable 1`] = `
"
Neon Auth has been disabled

"
`;

exports[`neon-auth > disable with delete data 1`] = `
"
Neon Auth has been disabled

"
`;

exports[`neon-auth > domain add 1`] = `
"
Domain "https://myapp.com" added

"
`;

exports[`neon-auth > domain delete 1`] = `
"
Domain "https://example.com" deleted

"
`;

exports[`neon-auth > domain list 1`] = `
"- domain: https://example.com
- domain: https://app.example.com
"
`;

exports[`neon-auth > enable 1`] = `
"auth_provider: better_auth
auth_provider_project_id: test-auth-project-id
pub_client_key: pk_test_123
secret_server_key: sk_test_456
jwks_url: https://auth.test.neon.tech/.well-known/jwks.json
schema_name: neon_auth
table_name: users_sync
base_url: https://auth.test.neon.tech
"
`;

exports[`neon-auth > enable already enabled 1`] = `
"auth_provider: better_auth
auth_provider_project_id: test-auth-project-id
branch_id: br-sunny-branch-123456
db_name: neondb
base_url: https://auth.test.neon.tech
created_at: 2024-01-01T00:00:00Z
jwks_url: https://auth.test.neon.tech/.well-known/jwks.json
"
`;

exports[`neon-auth > oauth-provider add 1`] = `
"id: google
type: shared
client_id: ""
"
`;

exports[`neon-auth > oauth-provider delete 1`] = `
"
OAuth provider "google" deleted

"
`;

exports[`neon-auth > oauth-provider list 1`] = `
"- id: google
  type: shared
  client_id: ""
- id: github
  type: shared
  client_id: ""
"
`;

exports[`neon-auth > oauth-provider update 1`] = `
"id: google
type: standard
client_id: my-client-id
"
`;

exports[`neon-auth > status 1`] = `
"auth_provider: better_auth
auth_provider_project_id: test-auth-project-id
branch_id: br-sunny-branch-123456
db_name: neondb
base_url: https://auth.test.neon.tech
created_at: 2024-01-01T00:00:00Z
jwks_url: https://auth.test.neon.tech/.well-known/jwks.json
"
`;

exports[`neon-auth > status not configured 1`] = `
"
Neon Auth is not configured for this branch

"
`;

exports[`neon-auth > user create 1`] = `
"
User created
  ID:      test-user-id
  Email:   test@example.com
  Name:    Test User

"
`;

exports[`neon-auth > user delete 1`] = `
"
User "test-user-id" deleted

"
`;

exports[`neon-auth > user set-role 1`] = `
"
Roles updated
  User ID:   test-user-id
  Roles:     admin

"
`;
